:gear: 漢字の連続文字数上限撤廃

--- a/.textlintrc
+++ b/.textlintrc
@@ -125,6 +125,7 @@
     "prefer-tari-tari": false,
     "abbr-within-parentheses": true,
     "no-mixed-zenkaku-and-hankaku-alphabet": true,
-    "footnote-order": true
+    "footnote-order": true,
+    "ja-technical-writing/max-kanji-continuous-len": false
   }
 }
