--- a/.textlintrc
+++ b/.textlintrc
@@ -126,6 +126,7 @@
     "abbr-within-parentheses": true,
     "no-mixed-zenkaku-and-hankaku-alphabet": true,
     "footnote-order": true,
-    "ja-technical-writing/max-kanji-continuous-len": false
+    "ja-technical-writing/max-kanji-continuous-len": false,
+    "ja-technical-writing/max-comma": false
   }
 }
