--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "resume template",
   "scripts": {
     "lint": "textlint docs/README.md",
+    "lint-fix": "textlint docs/README.md --fix",
     "build:pdf": "md-to-pdf docs/README.md --config-file ./pdf-configs/config.js"
   },
   "keywords": [],
