feat: README に資格情報と新卒研修内容を追加
- 応用情報技術者試験を追加
- 新卒研修の詳細を記載
- スキルアイコンから Docker を削除

--- a/.textlintrc
+++ b/.textlintrc
@@ -15,7 +15,8 @@
         "max": 6,
         "allow": [
           "慶應義塾大学大学院理工学研究科",
-          "基本情報技術者試験"
+          "基本情報技術者試験",
+          "応用情報技術者試験"
         ]
       },
       "arabic-kanji-numbers": true,
