--- a/.textlintrc
+++ b/.textlintrc
@@ -1,24 +1,14 @@
 {
   "rules": {
     "preset-ja-technical-writing": {
-      "sentence-length": {
-        "max": 120,
-        "severity": "warning"
-      },
+      "sentence-length": false,
       "max-comma": {
         "max": 3
       },
       "max-ten": {
         "max": 3
       },
-      "max-kanji-continuous-len": {
-        "max": 6,
-        "allow": [
-          "慶應義塾大学大学院理工学研究科",
-          "基本情報技術者試験",
-          "応用情報技術者試験"
-        ]
-      },
+      "max-kanji-continuous-len": false,
       "arabic-kanji-numbers": true,
       "no-mix-dearu-desumasu": {
         "preferInHeader": "",
@@ -26,10 +16,7 @@
         "preferInList": "である",
         "strict": false
       },
-      "ja-no-mixed-period": {
-        "periodMark": "。",
-        "severity": "warning"
-      },
+      "ja-no-mixed-period": false,
       "no-double-negative-ja": true,
       "no-dropping-the-ra": true,
       "no-doubled-conjunctive-particle-ga": {
