feat: Puppeteer 用の Chrome インストールステップを追加
- GitHub Actions のワークフローに Puppeteer 用の Chrome インストールを追加
- PDF 生成プロセスの前に必要なブラウザを自動インストール

--- a/.github/workflows/build-pdf.yml
+++ b/.github/workflows/build-pdf.yml
@@ -21,6 +21,8 @@ jobs:
           node-version: "20"
           cache: "pnpm"
       - run: pnpm install --frozen-lockfile
+      - name: install chrome for puppeteer
+        run: npx puppeteer browsers install chrome
       - name: build pdf
         run: pnpm run build:pdf
       - name: create release and upload asset
