feat: Jekyll 設定を更新し、デフォルトレイアウトを削除
- テーマを `just-the-docs` に変更
- 職務経歴書のタイトルと説明を追加
- mermaid のバージョンを設定
- 不要なデフォルト HTML レイアウトを削除

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,7 @@
-theme: jekyll-theme-slate
+remote_theme: just-the-docs/just-the-docs
+
+title: 職務経歴書
+description: 内藤翔太の職務経歴書
+
+mermaid:
+  version: "10"
